@@ -10,9 +10,11 @@ nls-util/CMakeLists.txt
 cmake/cppp.cmake
 cmake/file.cmake
 cmake/modules.cmake
+cmake/cppp_msvcsupport.cmake
 cmake/uninstall.cmake.in
 cmake/visibility.cmake
 cmake/cppp_init.cmake
 cmake/library.cmake
+cmake/locale.cmake
 ChangeLog
 COPYING
