@@ -1,3 +1,7 @@
+2023-07-26	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
+
+	Add locale support.
+
 2023-07-25	ChenPi11      <wushengwuxi-msctinoulk@outlook.com>
 
 	Add NLS Util.
